<resources>
    <string name="app_name">Week</string>
    <string name="text_monday">Monday</string>
    <string name="text_tuesday">Tuesday</string>
    <string name="text_wednesday">Wednesday</string>
    <string name="text_thursday">Thursday</string>
    <string name="text_friday">Friday</string>
    <string name="text_saturday">Saturday</string>
    <string name="text_sunday">Sunday</string>
    <string name="text_week_of_day">Week of Day</string>
    <string name="text_todo">TODO</string>
</resources>