<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_app_week"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/text_week_of_day"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"/>

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/text_todo"
        android:src="@drawable/duvidas"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/text_day"
        tools:ignore="ContentDescription,ImageContrastCheck" />
    
    <LinearLayout
        android:id="@+id/container_week"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/shape_container_week"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_segunda"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="@color/cor_segunda"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingHorizontal="20dp"
                        android:text="@string/text_monday"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        tools:ignore="TextContrastCheck" />

                    <ImageView
                        android:layout_width="133dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/seg"
                        tools:ignore="ContentDescription,ImageContrastCheck" />

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_terca"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="@color/cor_terca"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingHorizontal="20dp"
                        android:text="@string/text_tuesday"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold"/>

                    <ImageView
                        android:layout_width="88dp"
                        android:layout_height="117dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/terc"
                        tools:ignore="ContentDescription" />

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_quarta"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="@color/cor_quarta"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingHorizontal="20dp"
                        android:text="@string/text_wednesday"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold"/>

                    <ImageView
                        android:layout_width="78dp"
                        android:layout_height="117dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/quart"
                        tools:ignore="ContentDescription" />

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_quinta"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="@color/cor_quinta"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingHorizontal="20dp"
                        android:text="@string/text_thursday"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold"/>

                    <ImageView
                        android:layout_width="78dp"
                        android:layout_height="117dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/quint"
                        tools:ignore="ContentDescription" />

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_sexta"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="@color/cor_sexta"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingHorizontal="20dp"
                        android:text="@string/text_friday"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold"/>

                    <ImageView
                        android:layout_width="78dp"
                        android:layout_height="117dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/sext"
                        tools:ignore="ContentDescription" />

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_sabado"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="@color/cor_sabado"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingHorizontal="20dp"
                        android:text="@string/text_saturday"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold"/>

                    <ImageView
                        android:layout_width="78dp"
                        android:layout_height="117dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/sabad"
                        tools:ignore="ContentDescription" />

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_domingo"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="@color/cor_domingo"
                    app:cardCornerRadius="20sp"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingHorizontal="20dp"
                        android:text="@string/text_sunday"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="78dp"
                        android:layout_height="117dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/doming"
                        tools:ignore="ContentDescription" />

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>